# flappy-bird-with-gen-algorithm

./: Barriers.cpp  Barriers.h  CMakeLists.txt  Flappy_bird.cpp  Flappy_bird.h  Generation.h  MyCostants.h  Network.cpp  Network.h  Pipe.cpp  Pipe.h  main.cpp  sfml-app
include/: Flappy_bird.h  MyCostants.h  MyGraphic.h  Scoreboard.h
src/: Barriers.cpp  Flappy_bird.cpp  Generation.cpp  MyGraphic.cpp  Scoreboard.cpp
